--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NaxGym</title>
+    <script src="https://kit.fontawesome.com/12c401b8a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-
+        <nav class="container">
+            <div>
+                <h1 class="logo">NaxFit</h1>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </div>
+            <div class="hamburgar">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+        <div class="container hero-div">
+            <div class="hero-text-div">
+                <h1>Get body in <br><span class="hero-shape">shape</span> & stay<br>healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <div class="button-div">
+                    <a href="sample.html" target="_blank"><button class="btn-pri">Join Club Now!</button></a>
+                    <a href="sample.html" target="_blank"><button class="btn-sec">Download App</button></a>
+                    </div>
+            </div>
+            <div class="hero-image-div">
+                <div class="upper-div-parent">
+                     <div class="upper-div">
+                        <h5 class="hc500">500+</h5>
+                        <p class="pc500">Free Workout Videos</p>
+                     </div>   
+                </div>
+                <div class="lower-div-parent">
+                     <div class="lower-div">
+                        <img src="./assets/play-button.svg" alt="">
+                        <div>
+                        <h5 class="hc350">350+</h5>
+                        <p class="pc500">Video tutorial</p>
+                        </div>
+                     </div>   
+                </div>
+            </div>  
+        </div>
     </header>
 
     <main>
