--- a/index.html
+++ b/index.html
@@ -30,32 +30,72 @@
                 <h1>Get body in <br><span class="hero-shape">shape</span> & stay<br>healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
                 <div class="button-div">
-                    <a href="sample.html" target="_blank"><button class="btn-pri">Join Club Now!</button></a>
-                    <a href="sample.html" target="_blank"><button class="btn-sec">Download App</button></a>
-                    </div>
+                <a href="sample.html" target="_blank"><button class="btn-pri">Join Club Now!</button></a>
+                <a href="sample.html" target="_blank"><button class="btn-sec">Download App</button></a>
+                </div>
             </div>
             <div class="hero-image-div">
                 <div class="upper-div-parent">
-                     <div class="upper-div">
-                        <h5 class="hc500">500+</h5>
-                        <p class="pc500">Free Workout Videos</p>
-                     </div>   
+                    <div class="upper-div">
+                    <h5 class="hc500">500+</h5>
+                    <p class="pc500">Free Workout Videos</p>
+                    </div>   
                 </div>
                 <div class="lower-div-parent">
-                     <div class="lower-div">
-                        <img src="./assets/play-button.svg" alt="">
-                        <div>
-                        <h5 class="hc350">350+</h5>
-                        <p class="pc500">Video tutorial</p>
-                        </div>
-                     </div>   
+                    <div class="lower-div">
+                    <img src="./assets/play-button.svg" alt="">
+                    <div>
+                    <h5 class="hc350">350+</h5>
+                    <p class="pc500">Video tutorial</p>
+                    </div>
+                    </div>   
                 </div>
             </div>  
         </div>
     </header>
-
     <main>
-
+    <section> <!-- CHANGE YOUR HABITS -->
+        <div class="container chy-parent-div">
+            <div class="cyh-text-div">
+                <h2>Change Your Habits</h2>
+                <P>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</P>
+            </div>
+            <div class="cyh-bottom-div">
+                <div class="habit-div">
+                    <img src="./assets/cyh1.png" alt="pushup">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-div">
+                    <img src="./assets/cyh2.png" alt="yoga">
+                    <h5>Time</h5>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-div">
+                    <img src="./assets/cyh3.png" alt="dum bell press">
+                    <h5>Practice</h5>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-div">
+                    <img src="./assets/cyh4.png" alt="dum bell curl">
+                    <h5>Weight Loss</h5>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section> <!-- RUN AN EXTRA MILE -->
+        <div class="container rem-parent-div">
+            <div class="rem-text-div">
+                <h2>Run an Extra Mile Easily</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <a href="sample.html" target="_blank"><button class="btn-pri">Join Now</button></a>
+            </div>
+            <div class="rem-image-div">
+                <img src="./assets/run.jpg" alt="">
+            </div>
+        </div>
+    </section>
     </main>
     
     <footer>
