--- a/index.html
+++ b/index.html
@@ -87,12 +87,44 @@
     <section> <!-- RUN AN EXTRA MILE -->
         <div class="container rem-parent-div">
             <div class="rem-text-div">
-                <h2>Run an Extra Mile Easily</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                <h2>Run an Extra <br>Mile Easily</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With br hundreds of professional workouts.</p>
                 <a href="sample.html" target="_blank"><button class="btn-pri">Join Now</button></a>
             </div>
             <div class="rem-image-div">
                 <img src="./assets/run.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <section><!-- TRAINING AND EXERCISES -->
+        <div class="container tne-parent-div">
+            <div class="tne-text-div">
+                <h2>Trainings and Exercises</h2>
+                <P>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</P>
+            </div>
+            <div class="tne-main-image-div">
+               <div class="tne-image-row-1">
+                <div class="tne-img-div-1 tne-image">
+                <p class="tne-image-title">Straching</p>
+                </div>
+                <div class="tne-img-div-2 tne-image">
+                <p class="tne-image-title">Pushups</p>
+                </div>
+                <div class="tne-img-div-3 tne-image">
+                <p class="tne-image-title">Leg Press</p>
+                </div>
+               </div>
+               <div class="tne-image-row-2">
+                <div class="tne-img-div-4 tne-image">
+                <p class="tne-image-title">Leg Strech</p>
+                </div>
+                <div class="tne-img-div-5 tne-image">
+                <p class="tne-image-title">Thai Strech</p>
+                </div>
+                <div class="tne-img-div-6 tne-image">
+                <p class="tne-image-title">Adbominal Press</p>
+                </div>
+               </div>
             </div>
         </div>
     </section>
