--- a/index.html
+++ b/index.html
@@ -128,6 +128,61 @@
             </div>
         </div>
     </section>
+    <section class="op-per-bg"> <!-- OUR PACKAGES -->
+        <div class="container op-main-div">
+            <div class="cyh-text-div">
+                <h2>Our Packages </h2>
+                <P>Explore our packages for every fitness journey. Choose from flexible plans, each offering unique benefits to suit your goals.</P>
+            </div>
+            <div class="op-card-div">
+                <div class="card-lr">
+                    <h3 >STUDENT</h3>
+                    <p class="card-price"> &#2547; 1200/-</p>
+                    <p class="per-month">Per Month</p>
+                    <ul>
+                        <li>Swimming & Cardio</li>
+                        <li>Unlimited Free equipments</li>
+                        <li>Max 3 Hours Per Day</li>
+                        <li>Free Supplements</li>
+                        <li>Monthly 1 Training Session</li>
+                        <li>1 Executive Trainer</li>
+                        <li>Free WiFi</li>
+                    </ul>
+                    <a href="sample.html"><button class="btn-pri">Join Now <i class="fa-solid fa-angle-right"></i></button></a>
+                </div>
+                <div class="card-mid">
+                    <h3 >REGULAR</h3>
+                    <p class="card-price-2"> &#2547; 1500/-</p>
+                    <p class="per-month-2">Per Month</p>
+                    <ul>
+                        <li>Swimming & Cardio</li>
+                        <li>Unlimited Free equipments</li>
+                        <li>Max 3 Hours Per Day</li>
+                        <li>Free Supplements</li>
+                        <li>Monthly 1 Training Session</li>
+                        <li>1 Executive Trainer</li>
+                        <li>Free WiFi</li>
+                    </ul>
+                    <a href="sample.html"><button class="btn-3">Join Now <i class="fa-solid fa-angles-right"></i></button></a>
+                </div>
+                <div class="card-lr">
+                    <h3 >PRO</h3>
+                    <p class="card-price"> &#2547; 1900/-</p>
+                    <p class="per-month">Per Month</p>
+                    <ul>
+                        <li>Swimming & Cardio</li>
+                        <li>Unlimited Free equipments</li>
+                        <li>Max 5 Hours Per Day</li>
+                        <li>Free Supplements</li>
+                        <li>Monthly 3 Training Session</li>
+                        <li>1 Senior Trainer</li>
+                        <li>Free WiFi</li>
+                    </ul>
+                    <a href="sample.html"><button class="btn-pri">Join Now <i class="fa-solid fa-angle-right"></i></button></a>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
     
     <footer>
