Meet  our Team and BMI Calculator

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </div>  
         </div>
     </header>
+    
     <main>
     <section> <!-- CHANGE YOUR HABITS -->
         <div class="container chy-parent-div">
@@ -179,6 +180,107 @@
                         <li>Free WiFi</li>
                     </ul>
                     <a href="sample.html"><button class="btn-pri">Join Now <i class="fa-solid fa-angle-right"></i></button></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section><!-- BMI CALCULATOR SEC1 -->
+        <div class="container bmi-parent-div">
+            <div class="tne-text-div">
+                <h2>BMI Calculator</h2>
+                <P>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</P>
+            </div>
+        </div>
+    </section>
+    <section class="bmisec2"><!-- BMI CALCULATOR SEC2 -->
+        <div class="container bmi-parent-div-2">
+            <div class="bmi-chart-div">
+                <h4>BMI Calculator Chart</h4>
+                <table>
+                    <tr>
+                        <th>BMI</th>
+                        <th>Weight Status</th>
+                    </tr>
+                    <tr>
+                        <td>Below 18.5</td>
+                        <td>Underweight</td>
+                    </tr>
+                    <tr>
+                        <td>18.5 - 24.9</td>
+                        <td>Healthy</td>
+                    </tr>
+                    <tr>
+                        <td>25.0 - 29.9</td>
+                        <td>Overweight</td>
+                    </tr>
+                    <tr>
+                        <td>30.0 - and Above</td>
+                        <td>Obese</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="bmi-input-div">
+                <h4>Calculate your BMI</h4><br>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <form action="">
+                    <div class="input-row-1">
+                        <input type="number" name="" id="" placeholder="Height/cm">
+                        <input type="number" name="" id="" placeholder="Weight/kg">
+                    </div>
+                    <div class="input-row-1">
+                        <input type="number" name="" id="" placeholder="Age">
+                        <select name="" id="">
+                            <option value="0" disabled selected hidden>Sex</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value="Intersex">Intersex</option>
+                        </select>
+                    </div>
+                    <div class="input-row-3">
+                        <select name="" id="">
+                            <option value="0" disabled selected hidden>Select an activity factor</option>
+                            <option value="1.2">Sedentary (little or no exercise)</option>
+                            <option value="1.375">Lightly active (light exercise/sports 1-3 days/week)</option>
+                            <option value="1.55">Moderately active (moderate exercise/sports 3-5 days/week)</option>
+                            <option value="1.725">Very active (hard exercise/sports 6-7 days a week)</option>
+                            <option value="1.9">Super active (very hard exercise/physical job & exercise 2x/day)</option>
+                        </select>
+                        <input id="calculate-button" type="submit" value="Calculate">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section><!-- MEET OUR TRAINER -->
+        <div class="container team-main-div">
+            <div class="cyh-text-div">
+                <h2>Meet Our Trainers</h2>
+                <P>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</P>
+            </div>
+            <div class="container meet-image-div">
+                <div class="trainer-images-1 trainer-images">
+                    <h5 class="trainer-name">Jerome Bell</h5>
+                    <p class="job-title">Personal Trainer</p>
+                </div>
+                <div class="trainer-images-2 trainer-images">
+                    <h5 class="trainer-name">Cameron Williamson</h5>
+                    <p class="job-title">Nutrition Specialist</p>
+                </div>
+                <div class="trainer-images-3 trainer-images">
+                    <h5 class="trainer-name">Darrell Steward</h5>
+                    <p class="job-title">Group Fitness Instructor</p>
+                </div>
+                <div class="trainer-images-4 trainer-images">
+                    <h5 class="trainer-name">Dianne Russell</h5>
+                    <p class="job-title">Wellness Coach</p>
+                </div>
+                <div class="trainer-images-5 trainer-images">
+                    <h5 class="trainer-name">Cody Fisher</h5>
+                    <p class="job-title">Co-Trainer</p>
+                </div>
+                <div class="trainer-images-6 trainer-images">
+                    <h5 class="trainer-name">Theresa Webb</h5>
+                    <p class="job-title">Co-Trainer</p>
                 </div>
             </div>
         </div>
