--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>  
         </div>
     </header>
-    
+
     <main>
     <section> <!-- CHANGE YOUR HABITS -->
         <div class="container chy-parent-div">
@@ -287,8 +287,35 @@
     </section>
     </main>
     
-    <footer>
-
+    <footer class="bmisec2"><!-- FOOTER -->
+        <div class="container footer-main-div">
+            <div class="footer-about">
+                <h1 class="logo">NaxFit</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+            <div class="footer-links">
+                <h3 class="linktitle">Get Started</h3>
+                <ul>
+                    <li><a href="sample.html" target="_blank">Service</a></li>
+                    <li><a href="sample.html" target="_blank">Contact Us</a></li>
+                    <li><a href="sample.html" target="_blank">Affiliate Program</a></li>
+                    <li><a href="sample.html" target="_blank">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h3 class="linktitle">Browse Pages</h3>
+                <ul>
+                    <li><a href="sample.html" target="_blank">Fitness</a></li>
+                    <li><a href="sample.html" target="_blank">Blogs</a></li>
+                    <li><a href="sample.html" target="_blank">Workout Library</a></li>
+                    <li><a href="sample.html" target="_blank">Nutrition</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container copyright-div">
+            <hr>
+            <p class="copy-text">All right reserved @NaxFit 2024</p>
+        </div>
     </footer>
 </body>
 </html>
