--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </section>
     <section><!-- BMI CALCULATOR SEC1 -->
         <div class="container bmi-parent-div">
-            <div class="tne-text-div">
+            <div class="bmi-text-div">
                 <h2>BMI Calculator</h2>
                 <P>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</P>
             </div>
