mobile respondive except TNE Part

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>NaxGym</title>
     <script src="https://kit.fontawesome.com/12c401b8a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/tablet.css">
+    <link rel="stylesheet" href="styles/mobile.css">
 </head>
 <body>
     <header>
@@ -13,7 +15,7 @@
             <div>
                 <h1 class="logo">NaxFit</h1>
             </div>
-            <div>
+            <div class="navlink">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Service</a></li>
@@ -137,49 +139,61 @@
             </div>
             <div class="op-card-div">
                 <div class="card-lr">
-                    <h3 >STUDENT</h3>
-                    <p class="card-price"> &#2547; 1200/-</p>
-                    <p class="per-month">Per Month</p>
-                    <ul>
-                        <li>Swimming & Cardio</li>
-                        <li>Unlimited Free equipments</li>
-                        <li>Max 3 Hours Per Day</li>
-                        <li>Free Supplements</li>
-                        <li>Monthly 1 Training Session</li>
-                        <li>1 Executive Trainer</li>
-                        <li>Free WiFi</li>
-                    </ul>
-                    <a href="sample.html"><button class="btn-pri">Join Now <i class="fa-solid fa-angle-right"></i></button></a>
+                    <div>
+                        <h3>STUDENT</h3>
+                        <p class="card-price"> &#2547; 1200/-</p>
+                        <p class="per-month">Per Month</p>
+                    </div>
+                    <div class="left-div">
+                        <ul>
+                            <li>Swimming & Cardio</li>
+                            <li>Unlimited Free equipments</li>
+                            <li>Max 3 Hours Per Day</li>
+                            <li>Free Supplements</li>
+                            <li>Monthly 1 Training Session</li>
+                            <li>1 Executive Trainer</li>
+                            <li>Free WiFi</li>
+                        </ul>
+                        <a href="sample.html"><button class="btn-pri">Join Now <i class="fa-solid fa-angle-right"></i></button></a>
+                    </div>
                 </div>
                 <div class="card-mid">
-                    <h3 >REGULAR</h3>
-                    <p class="card-price-2"> &#2547; 1500/-</p>
-                    <p class="per-month-2">Per Month</p>
-                    <ul>
-                        <li>Swimming & Cardio</li>
-                        <li>Unlimited Free equipments</li>
-                        <li>Max 3 Hours Per Day</li>
-                        <li>Free Supplements</li>
-                        <li>Monthly 1 Training Session</li>
-                        <li>1 Executive Trainer</li>
-                        <li>Free WiFi</li>
-                    </ul>
-                    <a href="sample.html"><button class="btn-3">Join Now <i class="fa-solid fa-angles-right"></i></button></a>
+                    <div>
+                        <h3>REGULAR</h3>
+                        <p class="card-price-2"> &#2547; 1500/-</p>
+                        <p class="per-month-2">Per Month</p>
+                    </div>
+                    <div class="left-div2">
+                        <ul>
+                            <li>Swimming & Cardio</li>
+                            <li>Unlimited Free equipments</li>
+                            <li>Max 4 Hours Per Day</li>
+                            <li>Free Supplements</li>
+                            <li>Monthly 3 Training Session</li>
+                            <li>1 Executive Trainer</li>
+                            <li>Free WiFi</li>
+                        </ul>
+                        <a href="sample.html"><button class="btn-3">Join Now <i class="fa-solid fa-angles-right"></i></button></a>
+                    </div>
                 </div>
                 <div class="card-lr">
-                    <h3 >PRO</h3>
-                    <p class="card-price"> &#2547; 1900/-</p>
-                    <p class="per-month">Per Month</p>
-                    <ul>
-                        <li>Swimming & Cardio</li>
-                        <li>Unlimited Free equipments</li>
-                        <li>Max 5 Hours Per Day</li>
-                        <li>Free Supplements</li>
-                        <li>Monthly 3 Training Session</li>
-                        <li>1 Senior Trainer</li>
-                        <li>Free WiFi</li>
-                    </ul>
-                    <a href="sample.html"><button class="btn-pri">Join Now <i class="fa-solid fa-angle-right"></i></button></a>
+                    <div>
+                        <h3>PRO</h3>
+                        <p class="card-price"> &#2547; 1900/-</p>
+                        <p class="per-month">Per Month</p>
+                    </div>
+                    <div class="left-div">
+                        <ul>
+                            <li>Swimming & Cardio</li>
+                            <li>Unlimited Free equipments</li>
+                            <li>Max 5 Hours Per Day</li>
+                            <li>Free Supplements</li>
+                            <li>Monthly 6 Training Session</li>
+                            <li>1 Senior Trainer</li>
+                            <li>Free WiFi</li>
+                        </ul>
+                        <a href="sample.html"><button class="btn-pri">Join Now <i class="fa-solid fa-angle-right"></i></button></a>
+                    </div>
                 </div>
             </div>
         </div>
