--- a/index.html
+++ b/index.html
@@ -98,39 +98,36 @@
                 <img src="./assets/run.jpg" alt="">
             </div>
         </div>
-    </section>
-    <section><!-- TRAINING AND EXERCISES -->
+    </section>    
+    <section> <!--TRAINING AND EXERCISES-->
         <div class="container tne-parent-div">
             <div class="tne-text-div">
                 <h2>Trainings and Exercises</h2>
                 <P>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</P>
             </div>
             <div class="tne-main-image-div">
-               <div class="tne-image-row-1">
-                <div class="tne-img-div-1 tne-image">
-                <p class="tne-image-title">Straching</p>
+                <div class="tne-image-box tne-img-div-1">
+                    <p class="the-image-title">HELLO</p>
                 </div>
-                <div class="tne-img-div-2 tne-image">
-                <p class="tne-image-title">Pushups</p>
+                <div class="tne-image-box tne-img-div-2">
+                    <p class="the-image-title">HELLO</p>
                 </div>
-                <div class="tne-img-div-3 tne-image">
-                <p class="tne-image-title">Leg Press</p>
+                <div class="tne-image-box tne-img-div-3">
+                    <p class="the-image-title">HELLO</p>
                 </div>
-               </div>
-               <div class="tne-image-row-2">
-                <div class="tne-img-div-4 tne-image">
-                <p class="tne-image-title">Leg Strech</p>
+                <div class="tne-image-box tne-img-div-4">
+                    <p class="the-image-title">HELLO</p>
                 </div>
-                <div class="tne-img-div-5 tne-image">
-                <p class="tne-image-title">Thai Strech</p>
+                <div class="tne-image-box tne-img-div-5">
+                    <p class="the-image-title">HELLO</p>
                 </div>
-                <div class="tne-img-div-6 tne-image">
-                <p class="tne-image-title">Adbominal Press</p>
+                <div class="tne-image-box tne-img-div-6">
+                    <p class="the-image-title">HELLO</p>
                 </div>
-               </div>
             </div>
         </div>
     </section>
+
     <section class="op-per-bg"> <!-- OUR PACKAGES -->
         <div class="container op-main-div">
             <div class="cyh-text-div">
