--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <h1 class="logo">NaxFit</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
             </div>
-            <div class="footer-links">
+            <div class="footer-links-1">
                 <h3 class="linktitle">Get Started</h3>
                 <ul>
                     <li><a href="sample.html" target="_blank">Service</a></li>
@@ -313,7 +313,7 @@
                     <li><a href="sample.html" target="_blank">About Us</a></li>
                 </ul>
             </div>
-            <div class="footer-links">
+            <div class="footer-links-2">
                 <h3 class="linktitle">Browse Pages</h3>
                 <ul>
                     <li><a href="sample.html" target="_blank">Fitness</a></li>
