--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="op-card-div">
                 <div class="card-lr">
-                    <div>
+                    <div class="mpad">
                         <h3>STUDENT</h3>
                         <p class="card-price"> &#2547; 1200/-</p>
                         <p class="per-month">Per Month</p>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="card-mid">
-                    <div>
+                    <div class="mpad">
                         <h3>REGULAR</h3>
                         <p class="card-price-2"> &#2547; 1500/-</p>
                         <p class="per-month-2">Per Month</p>
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="card-lr">
-                    <div>
+                    <div class="mpad">
                         <h3>PRO</h3>
                         <p class="card-price"> &#2547; 1900/-</p>
                         <p class="per-month">Per Month</p>
